--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -17,3 +17,12 @@ winpty docker run -it -e POSTGRES_USER="root" -e POSTGRES_PASSWORD="root" -e POS
 
 
 winpty docker run -it -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" -e PGADMIN_DEFAULT_PASSWORD="root" -p 8080:80 --network=pg-network --name pgadmin-2 dpage/pgadmin4
+
+COPY taxi_zone_lookup(LocationID, Borough, Zone, service_zone)
+FROM '/c/Users/VINICIUS/Desktop/programs/Friendly tutorials/Data Engineering/DE Zoomcamp/data-engineering-zoomcamp/01-docker-terraform/2_docker_sql
+/taxi_zone_lookup.csv'
+DELIMITER ','
+CSV HEADER;
+
+
+\COPY taxi_zone_lookup(LocationID, Borough, Zone, service_zone) FROM 'c:/Users/VINICIUS/Desktop/programs/Friendly tutorials/Data Engineering/DE Zoomcamp/data-engineering-zoomcamp/01-docker-terraform/2_docker_sql/taxi_zone_lookup.csv' WITH (FORMAT csv, HEADER true)
